--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "firebase-admin": "^12.6.0",
     "helmet": "^8.0.0",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^8.0.1",
     "resend": "^4.0.0",
     "uuid": "^10.0.0",
     "zod": "^3.23.8"
@@ -28,6 +29,7 @@
     "@types/express": "^5.0.0",
     "@types/multer": "^1.4.12",
     "@types/node": "^22.7.4",
+    "@types/nodemailer": "^7.0.11",
     "@types/uuid": "^10.0.0",
     "tsx": "^4.19.1",
     "typescript": "^5.6.2"
