--- a/.env.example
+++ b/.env.example
@@ -9,11 +9,22 @@ CLOUDINARY_API_SECRET=your-api-secret
 # Frontend URL (for CORS)
 FRONTEND_URL=https://your-portfolio.vercel.app
 
-# Email Service (Resend)
+# Email Service (Resend - for contact form notifications)
 RESEND_API_KEY=re_xxxxxxxxxxxx
 
-# Admin Email (where contact form notifications are sent)
+# Admin Details
 ADMIN_EMAIL=your-email@example.com
+ADMIN_NAME=Your Name
+
+# SMTP Configuration (for reply emails via Nodemailer/Gmail)
+# To use Gmail SMTP, enable "Less secure app access" or use App Password:
+# https://myaccount.google.com/apppasswords
+SMTP_SERVICE=gmail
+SMTP_USER=your-email@gmail.com
+SMTP_PASS=your-app-password
+# Optional: Custom SMTP server (overrides SMTP_SERVICE if both HOST and PORT are set)
+# SMTP_HOST=smtp.example.com
+# SMTP_PORT=587
 
 # Server Port (for local development)
 PORT=5000
