--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "tsc",
     "start": "node dist/index.js",
     "vercel-build": "tsc",
-    "seed": "tsx scripts/seed.ts"
+    "seed": "tsx scripts/seed.ts",
+    "seed:experience": "tsx scripts/seed-experience.ts"
   },
   "dependencies": {
     "cloudinary": "^2.9.0",
