Add seed-tools-faqs script: introduce 'seed:tools-faqs' command in package.json to facilitate seeding of tools FAQs data, enhancing data initialization capabilities.

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "start": "node dist/index.js",
     "vercel-build": "tsc",
     "seed": "tsx scripts/seed.ts",
-    "seed:experience": "tsx scripts/seed-experience.ts"
+    "seed:experience": "tsx scripts/seed-experience.ts",
+    "seed:tools-faqs": "tsx scripts/seed-tools-faqs.ts"
   },
   "dependencies": {
     "cloudinary": "^2.9.0",
