Add seed:about-profile script to package.json: introduce command for seeding about profile data, enhancing data initialization capabilities.

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "vercel-build": "tsc",
     "seed": "tsx scripts/seed.ts",
     "seed:experience": "tsx scripts/seed-experience.ts",
-    "seed:tools-faqs": "tsx scripts/seed-tools-faqs.ts"
+    "seed:tools-faqs": "tsx scripts/seed-tools-faqs.ts",
+    "seed:about-profile": "tsx scripts/seed-about-profile.ts"
   },
   "dependencies": {
     "cloudinary": "^2.9.0",
